--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Page Title</title>
 </head>
 <body>
-
+<link rel="stylesheet" href="styles.css">
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
  <p>tuấn ngáo</p>
