--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset=utf-8>
-        <link rel="icon" type="image/x-icon" href="anhr/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
         <link rel="stylesheet" href="styles.css">
     <title>
     Trang web hướng dẫn lắp pc. </title>
@@ -12,7 +12,7 @@
         <p style="color:blue;">1.Chip:</p>
             <p>_Là chip, mạch tích hợp hoặc wafer nhỏ bằng vật liệu bán dẫn được nhúng với mạch tích hợp. Chip bao gồm các đơn vị xử lý và bộ nhớ của máy tính kỹ thuật số hiện đại (xem bộ vi xử lý; RAM).<br>
             _Là một bộ phận hoạt động như trung tâm truyền thông và điều khiển lưu lượng của bo mạch chủ, xác định các thành phần tương thích với bo mạch chủ bao gồm CPU, RAM, ổ cứng và card đồ họa
-            <br><img src="anhr/pc2.jpg" height="700" width="500">
+            <br><img src="img/pc2.jpg" height="700" width="500">
         </p>
         <p style="color:blue;">2.Bộ nhớ Ram:</p>
         <p>
@@ -20,25 +20,25 @@
         _Khi chúng ta mở một ứng dụng trên smartphone hay trên máy tính bảng, dữ liệu của phần mềm sẽ được truyền từ ổ cứng và lưu trữ tại RAM, lúc này CPU sẽ truy xuất và lấy dữ liệu từ RAM để hiển thị vào đáp ứng lại thao tác của người dùng.
         _Nhìn chung, bộ nhớ RAM là thiết bị trung gian giữa các tệp tin hệ thống bao gồm ROM và vi xử lý với nhiệm vụ là cung cấp các thông tin, tác vụ và các dòng lệnh càng nhanh càng tốt.
         _Những thông tin mà vi xử lý cần sẽ được lưu trữ trên RAM để chờ được truy nhập, có thể là tệp tin của hệ điều hành, dữ liệu của ứng dụng, đồ họa của game, các tác vụ thường hay bất cứ thứ gì cần được truy xuất ngay lập tức.
-        <br><img src="anhr/pc3.jpg" height="700" width="500">
+        <br><img src="img/pc3.jpg" height="700" width="500">
         </p >
         <p style="color:blue;">3.Bộ nhớ Rom:</p>
         <p>_Bộ nhớ chỉ đọc (ROM) là đơn vị bộ nhớ chính của bất kỳ hệ thống máy tính nào cùng với Bộ nhớ truy cập ngẫu nhiên (RAM), nhưng không giống như RAM, trong ROM, thông tin nhị phân được lưu trữ vĩnh viễn. Bây giờ, thông tin được lưu trữ này được cung cấp bởi nhà thiết kế và sau đó được lưu trữ bên trong ROM. Sau khi được lưu trữ, nó vẫn ở trong thiết bị, ngay cả khi tắt và bật lại nguồn.
             _Thông tin được nhúng vào ROM, dưới dạng các bit, bởi một quá trình được gọi là lập trình ROM. Ở đây, lập trình được sử dụng để chỉ quy trình phần cứng chỉ định các bit sẽ được chèn vào cấu hình phần cứng của thiết bị. Và đây là những gì làm cho ROM trở thành Thiết bị logic có thể lập trình (PLD).
-        <br><img src="anhr/pc04.jpg" height="700" width="500">
+        <br><img src="img/pc04.jpg" height="700" width="500">
         </p>
         <p style="color:blue;">4.Ổ lưu trữ:
         </p>
         <p>_Ổ cứng máy tính hay còn gọi là ổ cứng (Hard Disk Drive, viết tắt: HDD) là thiết bị dùng để lưu trữ dữ liệu trong máy tính của bạn. Với sự phát triển nhanh chóng của công nghệ, ổ đĩa cứng ngày nay có kích thước mỏng, gọn, nhẹ nhưng dung lượng thì ngày càng tăng lên.
             _Ổ cứng ngoài việc phụ trách lưu trữ dữ liệu còn liên quan trực tiếp đến những vấn đề quan trọng khi sử dụng máy tính như: tốc độ khởi động máy, tốc độ chép xuất dữ liệu của máy, độ an toàn của dữ liệu cá nhân để trên máy. 
             _Bất cứ các thao tác phần mềm trên máy tính của bạn như sao chép, cắt dán, khởi động phần mềm,… nhanh hay chậm đều phụ thuộc vào cấu tạo phần cứng của ổ cứng tốt hay không.
-            <br><img src="anhr/pc5.jpg" height="700" width="500">
-            <img src="anhr/pc5.2.jpg" height="700" width="500">
+            <br><img src="img/pc5.jpg" height="700" width="500">
+            <img src="img/pc5.2.jpg" height="700" width="500">
         <p style="color:blue;">5.Nguồn máy tính:</p>
          <p>Máy tính muốn hoạt động được cần phải có một bộ cấp nguồn để điều tiết và phân bổ các luồng điện khác nhau. Thế nhưng bạn đã thật sự hiểu rõ về bộ nguồn máy tính? Hãy theo dõi bài viết dưới đây để hiểu rõ hơn và biết được cách lựa chọn nguồn máy tính phù hợp nhé.
             <br>a.Định nghĩa:
             <br>Power Supply Unit (PSU) hay còn được gọi là nguồn máy tính, đây là một thiết bị nằm bên trong thùng máy giúp cung cấp năng lượng cho các bộ phận của máy tính như: Bo mạch chủ, ổ cứng, RAM,...
-            <br><img src="anhr/pc6.jpg" height="700" width="500">
+            <br><img src="img/pc6.jpg" height="700" width="500">
             <pre>b.Nguyên lý hoạt động:
             Nguồn máy tính được xem như là một bộ phận trung gian, giúp chuyển đổi dòng điện xoay chiều có hiệu điện thế lớn (Dòng điện từ ổ cắm - 220V) thành các dòng điện có mức điện áp nhỏ hơn. Các dòng điện áp nhỏ này sẽ là năng lượng phù hợp cho các thiết bị, linh kiện của máy tính có thể hoạt động.
             c.Các đường điện có trong nguồn máy tính:
@@ -88,7 +88,7 @@ Chuẩn đầu ra hiện đang được các nhà sản xuất nguồn máy tín
 
         + ATX 12V: Gồm phần chính 20 chân cắm và phụ 4 chân cắm.
 
-<img src="anhr/pc7.jpg" text-align:center; height="700" width="500">
+<img src="img/pc7.jpg" text-align:center; height="700" width="500">
         + EPS12V: Gồm phần chính 24 chân cắm và phụ 8 chân cắm.
 
         + ATX12V phiên bản 2.0: Gồm phần chính 24 chân và phụ 4 chân.
@@ -103,7 +103,7 @@ Các loại chân cắm thường được kết hợp từ nhiều dây điện
         + Dây điện phụ 12V: Gồm 4 đầu cắm với 2 chân 12V và 2 chân mát.
 
         + Đầu cắm SATA: SATA là ổ đĩa cứng cao cấp rất được ưa chuộng, để cắm ổ đĩa SATA bạn cần tối thiểu từ 2 - 4 chân cắm dẹt.
-<img src="anhr/pc8.jpg" height="700" width="500">
+<img src="img/pc8.jpg" height="700" width="500">
         + Đầu cắm PCI-Express: Đầu cắm này và đầu cắm SATA là những đầu cắm không thể thiếu trên các bộ nguồn máy tính hiện đại. Đây là loại đầu cắm dùng cho các card đồ họa và card mở rộng.
 
         + Đầu cắm ổ đĩa mềm: Đây là loại đầu cắm gồm 2 dây mát, 1 dây +5V, 1 dây +12V.
@@ -118,7 +118,7 @@ Các loại chân cắm thường được kết hợp từ nhiều dây điện
         + Đồng thời Chipset còn được sở hữu các tính năng quan trọng như: Điều khiển RAID, cổng FireWire vào mỗi phần seri bo mạch khác nhau. Ngoài ra, Chipset còn được dùng để giới hạn kiểu và tốc độ của CPU mà main server có thể tải được.
         + Việc tích hợp các tính năng khác nhau như: đồ họa, âm thanh, cổng USB cũng góp phần giúp tăng sự đa dạng và hữu ích của chipset khi sử dụng. Chính vì vậy mà đây là một trong những phần chính không thể thiếu đối với bất kỳ ai khi mua main server.
         + BIOS: Đây là một trong những thiết bị vào, ra rất quan trọng mà mỗi main server sở hữu, bởi vì chúng được thiết lập để chứa các thông số làm việc của hệ thống. Linh kiện này có thể được hàn dán trực tiếp vào main server hoặc lựa chọn cho mình một đế cắm để có thể tháo rời khi cần thiết.
-    <img src="anhr/pc11.jpg" height="500" width="800">
+    <img src="img/pc11.jpg" height="500" width="800">
     -Cấu tạo của main máy tính ra sao?
         + Socket: Đây được ví như là số chân cắm của CPU, tùy vào từng socket của CPU mà sẽ phù hợp với từng mainboard hỗ trợ. 
         +CPU: Là chuẩn khe cắm cho các bộ vi xử lý của các hãng khác nhau mà bạn cần phải quan tâm và lựa chọn sao cho phù hợp. Bởi ADM và Intel đều có sự khác nhau khi hình thành. Main có thể giúp hỗ trợ đến tối đa các tốc độ xử lý cần thiết.
@@ -127,7 +127,7 @@ Các loại chân cắm thường được kết hợp từ nhiều dây điện
         + Khe cắm PCI: Khe nắm này được trang bị nhằm mục đích để lắp thêm các thiết bị có thể giao tiếp với máy tính như card âm thanh và phần modem….
         + Khe cắm PCI Express: Đây là dạng khe cắm chuẩn hỗ trợ lượng băng thông cao hơn gấp 30 lần so với chuẩn PCI đề ra, và thực sự có khả năng thay thế hoàn toàn các khe cắm PCI lẫn AGP.
         +Ngoài ra, Mainboard còn chứa rất nhiều các bộ phận khác hữu ích, có thể hỗ trợ đến mức tối đa cho máy tính để đảm bảo sự hoạt động một cách hiệu quả.
-    <img src="anhr/pc12.jpg" height="700" width="2000">
+    <img src="img/pc12.jpg" height="700" width="2000">
     -Các loại Main máy tính hiện có trên thị trường:
         +Với sự phát triển mạnh mẽ của công nghệ như hiện nay thì đang có rất nhiều nhà sản xuất cho ra đời các mainboard khác nhau, nhằm mục đích hỗ trợ tối đa cho người dùng. Tuy nhiên, trong số đó cũng sẽ các loại bo mạch chủ thường được ưa chuộng và sử dụng như: AT, ATX, Baby AT, BTX, DTX, Full AT, Full ATX, microATX, NLX…..
         +Nếu tính về độ phổ biến rộng rãi nhất thì chúng ta có thể kể đến cái tên Mainboard ATX. Loại main này đang được sử dụng trong rất nhiều các máy tính hiện có trên thế giới. Bởi nó mang đến sự vận hành tốt và đảm bảo độ bền bỉ trong quá trình triển khai.
