--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="styles.css">
     <title>
     Trang web hướng dẫn lắp pc. </title>
-        <h1 style="color:red;font-size:150%">LẮP RÁP PC</h1>
-        <h2 style="color:sandybrown;font-size:150%">I.Bộ phận:</h2>
+        <h1 style="color:red;">LẮP RÁP PC</h1>
+        <h2 style="color:sandybrown;">I.Bộ phận:</h2>
         <p style="color:blue;">1.Chip:</p>
             <p>_Là chip, mạch tích hợp hoặc wafer nhỏ bằng vật liệu bán dẫn được nhúng với mạch tích hợp. Chip bao gồm các đơn vị xử lý và bộ nhớ của máy tính kỹ thuật số hiện đại (xem bộ vi xử lý; RAM).<br>
             _Là một bộ phận hoạt động như trung tâm truyền thông và điều khiển lưu lượng của bo mạch chủ, xác định các thành phần tương thích với bo mạch chủ bao gồm CPU, RAM, ổ cứng và card đồ họa
