--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     Trang web hướng dẫn lắp pc. </title>
         <h1 style="color:red;">LẮP RÁP PC</h1>
         <h2 style="color:sandybrown;">I.Bộ phận:</h2>
-        <p style="color:blue;">1.Chip:</p>
+        <p style="color:blue;" id="1">1.Chip:</p>
             <p>_Là chip, mạch tích hợp hoặc wafer nhỏ bằng vật liệu bán dẫn được nhúng với mạch tích hợp. Chip bao gồm các đơn vị xử lý và bộ nhớ của máy tính kỹ thuật số hiện đại (xem bộ vi xử lý; RAM).<br>
             _Là một bộ phận hoạt động như trung tâm truyền thông và điều khiển lưu lượng của bo mạch chủ, xác định các thành phần tương thích với bo mạch chủ bao gồm CPU, RAM, ổ cứng và card đồ họa
             <br><img src="img/pc2.jpg" height="700" width="500">
         </p>
-        <p style="color:blue;">2.Bộ nhớ Ram:</p>
+        <p style="color:blue;" id="2">2.Bộ nhớ Ram:</p>
         <p>
         _RAM (Random Access Memory) là bộ nhớ truy xuất ngẫu nhiên. Khi mở một phần mềm trên Laptop thì dữ liệu sẽ được truyền tải từ ổ đĩa cứng lên RAM và truyền tải vào CPU để xử lý, sau đó lưu ngược lại vào ổ cứng vì RAM có tốc độ rất nhanh hơn rất nhiều lần so với ổ cứng.<br>
         _Khi chúng ta mở một ứng dụng trên smartphone hay trên máy tính bảng, dữ liệu của phần mềm sẽ được truyền từ ổ cứng và lưu trữ tại RAM, lúc này CPU sẽ truy xuất và lấy dữ liệu từ RAM để hiển thị vào đáp ứng lại thao tác của người dùng.
@@ -21,26 +21,26 @@
         _Những thông tin mà vi xử lý cần sẽ được lưu trữ trên RAM để chờ được truy nhập, có thể là tệp tin của hệ điều hành, dữ liệu của ứng dụng, đồ họa của game, các tác vụ thường hay bất cứ thứ gì cần được truy xuất ngay lập tức.
         <br><img src="img/pc3.jpg" height="700" width="500">
         </p >
-        <p style="color:blue;">3.Bộ nhớ Rom:</p>
+        <p style="color:blue;" id="3">3.Bộ nhớ Rom:</p>
         <p>_Bộ nhớ chỉ đọc (ROM) là đơn vị bộ nhớ chính của bất kỳ hệ thống máy tính nào cùng với Bộ nhớ truy cập ngẫu nhiên (RAM), nhưng không giống như RAM, trong ROM, thông tin nhị phân được lưu trữ vĩnh viễn. Bây giờ, thông tin được lưu trữ này được cung cấp bởi nhà thiết kế và sau đó được lưu trữ bên trong ROM. Sau khi được lưu trữ, nó vẫn ở trong thiết bị, ngay cả khi tắt và bật lại nguồn.
             _Thông tin được nhúng vào ROM, dưới dạng các bit, bởi một quá trình được gọi là lập trình ROM. Ở đây, lập trình được sử dụng để chỉ quy trình phần cứng chỉ định các bit sẽ được chèn vào cấu hình phần cứng của thiết bị. Và đây là những gì làm cho ROM trở thành Thiết bị logic có thể lập trình (PLD).
         <br><img src="img/pc04.jpg" height="700" width="500">
         </p>
-        <p style="color:blue;">4.Ổ lưu trữ:
+        <p style="color:blue;" id="4">4.Ổ lưu trữ:
         </p>
         <p>_Ổ cứng máy tính hay còn gọi là ổ cứng (Hard Disk Drive, viết tắt: HDD) là thiết bị dùng để lưu trữ dữ liệu trong máy tính của bạn. Với sự phát triển nhanh chóng của công nghệ, ổ đĩa cứng ngày nay có kích thước mỏng, gọn, nhẹ nhưng dung lượng thì ngày càng tăng lên.
             _Ổ cứng ngoài việc phụ trách lưu trữ dữ liệu còn liên quan trực tiếp đến những vấn đề quan trọng khi sử dụng máy tính như: tốc độ khởi động máy, tốc độ chép xuất dữ liệu của máy, độ an toàn của dữ liệu cá nhân để trên máy. 
             _Bất cứ các thao tác phần mềm trên máy tính của bạn như sao chép, cắt dán, khởi động phần mềm,… nhanh hay chậm đều phụ thuộc vào cấu tạo phần cứng của ổ cứng tốt hay không.
             <br><img src="img/pc5.jpg" height="700" width="500">
             <img src="img/pc5.2.jpg" height="700" width="500">
-        <p style="color:blue;">5.Nguồn máy tính:</p>
+        <p style="color:blue;" id="5">5.Nguồn máy tính:</p>
          <p>Máy tính muốn hoạt động được cần phải có một bộ cấp nguồn để điều tiết và phân bổ các luồng điện khác nhau. Thế nhưng bạn đã thật sự hiểu rõ về bộ nguồn máy tính? Hãy theo dõi bài viết dưới đây để hiểu rõ hơn và biết được cách lựa chọn nguồn máy tính phù hợp nhé.
-            <br>a.Định nghĩa:
+            <br  id="5.1">a.Định nghĩa:
             <br>Power Supply Unit (PSU) hay còn được gọi là nguồn máy tính, đây là một thiết bị nằm bên trong thùng máy giúp cung cấp năng lượng cho các bộ phận của máy tính như: Bo mạch chủ, ổ cứng, RAM,...
             <br><img src="img/pc6.jpg" height="700" width="500">
-            <pre>b.Nguyên lý hoạt động:
-            Nguồn máy tính được xem như là một bộ phận trung gian, giúp chuyển đổi dòng điện xoay chiều có hiệu điện thế lớn (Dòng điện từ ổ cắm - 220V) thành các dòng điện có mức điện áp nhỏ hơn. Các dòng điện áp nhỏ này sẽ là năng lượng phù hợp cho các thiết bị, linh kiện của máy tính có thể hoạt động.
-            c.Các đường điện có trong nguồn máy tính:
+            <pre  id="5.2">b.Nguyên lý hoạt động:
+            Nguồn máy tính được xem như là một bộ phận trung gian, giúp chuyển đổi dòng điện xoay chiều có hiệu điện thế lớn (Dòng điện từ ổ cắm - 220V) thành các dòng điện có mức điện áp nhỏ hơn. Các dòng điện áp nhỏ này sẽ là năng lượng phù hợp cho các thiết bị, linh kiện của máy tính có thể hoạt động.</pre>
+             <pre  id="5.3">c.Các đường điện có trong nguồn máy tính:
     Nguồn máy tính sẽ có nhiều đường điện khác nhau phù hợp với mỗi linh kiện của máy tính. Cụ thể:
 
     + Đường điện +3.3V: Đây là một đường điện mới trên các bộ nguồn hiện đại. Đường điện này phù hợp với chuẩn ATX - cung cấp điện cho CPU và bộ nhớ chính.
@@ -53,7 +53,7 @@
 
     + Đường điện +12V: Đây là một đường điện quan trọng, cung cấp nguồn điện cho ổ cứng, card mở rộng và CPU nếu cần.
     Các chuẩn đầu ra và các loại chân cắm trên nguồn
-1. Nguồn máy tính là gì?
+    Nguồn máy tính là gì?
     - Định nghĩa
     Power Supply Unit (PSU) hay còn được gọi là nguồn máy tính, đây là một thiết bị nằm bên trong thùng máy giúp cung cấp năng lượng cho các bộ phận của máy tính như: Bo mạch chủ, ổ cứng, RAM,...
 
@@ -76,8 +76,8 @@
             + Đường điện -12V: Đường điện này thường được sử dụng ở các nguồn máy tính đời cũ, các nguồn mới cũng có tích hợp nhưng vì lý do cường độ dòng điện yếu (Chưa tới 1A) nên ít được sử dụng.
 
             + Đường điện +12V: Đây là một đường điện quan trọng, cung cấp nguồn điện cho ổ cứng, card mở rộng và CPU nếu cần.
-
-d. Các chuẩn đầu ra và các loại chân cắm trên nguồn
+</pre>
+    <pre id="5.3">d. Các chuẩn đầu ra và các loại chân cắm trên nguồn
     - Chuẩn đầu ra
 Chuẩn đầu ra hiện đang được các nhà sản xuất nguồn máy tính ưa chuộng sử dụng là chuẩn ATX 12V. Chuẩn này có 5 nhánh chính là:
 
@@ -109,7 +109,7 @@ Các loại chân cắm thường được kết hợp từ nhiều dây điện
 
         + Đầu cắm EPS 12V 8 chân: Đầu cắm này sử dụng cho bo mạch chủ của máy tính trạm và hệ thống máy tính chuyên nghiệp, phức tạp.
 </pre>
-<p style="color:blue;">6.Mainboard: </p>
+<p style="color:blue;" id="6">6.Mainboard: </p>
 <pre>-Mainbroad hay còn gọi là Main máy tính hoặc bo mạch chủ, đây là một trong những bảng mạch đóng vai trò nền tảng trong một chiếc máy tính. Vị trí của main thường được đặt tại trung tâm của thùng máy.
     -Chức năng chính của main khi sử dụng đó là phân phối điện cho CPU, RAM và những thành phần khác liên quan đến phần cứng của chiếc máy tính. Đồng thời cũng sẽ tạo ra một dòng liên kết chính để liên kết những phần này lại với nhau.
     -Những cấu tạo của main máy tính hoặc bo mạch chủ sẽ có những phần chính được triển khai như sau:
