--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
     Trang web hướng dẫn lắp pc. </title>
         <h1 style="color:red;">LẮP RÁP PC</h1>
         <h2 style="color:sandybrown;">I.Bộ phận:</h2>
+        <dl><a href="#1">1.Chip:</a>
+            <a href="#2">2.Bộ nhớ tạm(ram):</a>
+            <a href="#3">3.Bộ nhớ Rom:</a>
+            <a href="#4">4.Ổ lưu trữ:</a>
+            <a href="#5">5.Nguồn máy tính:</a>
+            <a href="#5.1">a.Định nghĩa:</a>
+            <a href="#5.2">b.Nguyên lý hoạt động:</a>
+            <a href="#5.3">c.Các đường điện có trong nguồn máy tính:</a>
+            <a href="#5.4">d. Các chuẩn đầu ra và các loại chân cắm trên nguồn:</a>
+            <a href="#6">6.Mainboard:</a>
         <p style="color:blue;" id="1">1.Chip:</p>
             <p>_Là chip, mạch tích hợp hoặc wafer nhỏ bằng vật liệu bán dẫn được nhúng với mạch tích hợp. Chip bao gồm các đơn vị xử lý và bộ nhớ của máy tính kỹ thuật số hiện đại (xem bộ vi xử lý; RAM).<br>
             _Là một bộ phận hoạt động như trung tâm truyền thông và điều khiển lưu lượng của bo mạch chủ, xác định các thành phần tương thích với bo mạch chủ bao gồm CPU, RAM, ổ cứng và card đồ họa
             <br><img src="img/pc2.jpg" height="700" width="500">
         </p>
-        <p style="color:blue;" id="2">2.Bộ nhớ Ram:</p>
+        <p style="color:blue;" id="2">2.Bộ nhớ tạm(ram):</p>
         <p>
         _RAM (Random Access Memory) là bộ nhớ truy xuất ngẫu nhiên. Khi mở một phần mềm trên Laptop thì dữ liệu sẽ được truyền tải từ ổ đĩa cứng lên RAM và truyền tải vào CPU để xử lý, sau đó lưu ngược lại vào ổ cứng vì RAM có tốc độ rất nhanh hơn rất nhiều lần so với ổ cứng.<br>
         _Khi chúng ta mở một ứng dụng trên smartphone hay trên máy tính bảng, dữ liệu của phần mềm sẽ được truyền từ ổ cứng và lưu trữ tại RAM, lúc này CPU sẽ truy xuất và lấy dữ liệu từ RAM để hiển thị vào đáp ứng lại thao tác của người dùng.
@@ -77,7 +87,7 @@
 
             + Đường điện +12V: Đây là một đường điện quan trọng, cung cấp nguồn điện cho ổ cứng, card mở rộng và CPU nếu cần.
 </pre>
-    <pre id="5.3">d. Các chuẩn đầu ra và các loại chân cắm trên nguồn
+    <pre id="5.3">d. Các chuẩn đầu ra và các loại chân cắm trên nguồn:
     - Chuẩn đầu ra
 Chuẩn đầu ra hiện đang được các nhà sản xuất nguồn máy tính ưa chuộng sử dụng là chuẩn ATX 12V. Chuẩn này có 5 nhánh chính là:
 
