--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
         <link rel="stylesheet" href="styles.css">
     <title>
     Trang web hướng dẫn lắp pc. </title>
-        <h1 style="color:red;">LẮP RÁP PC</h1>
+        <h1 style="color:yellow;">LẮP RÁP PC</h1>
         <h2 style="color:sandybrown;">I.Bộ phận:</h2>
         <dl><a href="#1">1.Chip:</a>
-            <br><a href="#2">2.Bộ nhớ tạm(ram):</a>
-            <br><a href="#3">3.Bộ nhớ Rom:</a>
-            <br><a href="#4">4.Ổ lưu trữ:</a>
-            <br><a href="#5">5.Nguồn máy tính:</a>
-            <br><a href="#5.1">a.Định nghĩa:</a>
-            <br><a href="#5.2">b.Nguyên lý hoạt động:</a>
-            <br><a href="#5.3">c.Các đường điện có trong nguồn máy tính:</a>
-            <br><a href="#5.4">d. Các chuẩn đầu ra và các loại chân cắm trên nguồn:</a>
-            <br><a href="#6">6.Mainboard:</a></dl>
+            <br><li href="#2">2.Bộ nhớ tạm(ram):</li>
+            <br><li href="#3">3.Bộ nhớ Rom:</li>
+            <br><li href="#4">4.Ổ lưu trữ:</li>
+            <br><li href="#5">5.Nguồn máy tính:</li>
+            <br><li href="#5.1">a.Định nghĩa:</li>
+            <br><li href="#5.2">b.Nguyên lý hoạt động:</li>
+            <br><li href="#5.3">c.Các đường điện có trong nguồn máy tính:</li>
+            <br><li href="#5.4">d. Các chuẩn đầu ra và các loại chân cắm trên nguồn:</li>
+            <br><li href="#6">6.Mainboard:</li></dl>
         <p style="color:blue;" id="1">1.Chip:</p>
             <p>_Là chip, mạch tích hợp hoặc wafer nhỏ bằng vật liệu bán dẫn được nhúng với mạch tích hợp. Chip bao gồm các đơn vị xử lý và bộ nhớ của máy tính kỹ thuật số hiện đại (xem bộ vi xử lý; RAM).<br>
             _Là một bộ phận hoạt động như trung tâm truyền thông và điều khiển lưu lượng của bo mạch chủ, xác định các thành phần tương thích với bo mạch chủ bao gồm CPU, RAM, ổ cứng và card đồ họa
