--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     <title>
     Trang web hướng dẫn lắp pc. </title>
-        <h1 style="color:yellow;">LẮP RÁP PC</h1>
+        <h1 style="color:yellow;border:3px solid black;background-color:LightGray">LẮP RÁP PC</h1>
         <h2 style="color:sandybrown;">I.Bộ phận:</h2>
         <dl><a href="#1">1.Chip:</a>
             <br><li href="#2">2.Bộ nhớ tạm(ram):</li>
