--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     Trang web hướng dẫn lắp pc. </title>
         <h1 style="color:yellow;border:3px solid black;background-color:LightGray">LẮP RÁP PC</h1>
         <h2 style="color:sandybrown;">I.Bộ phận:</h2>
-        <dl><a href="#1">1.Chip:</a>
+        <dl><li href="#1">1.Chip:</li>
             <br><li href="#2">2.Bộ nhớ tạm(ram):</li>
             <br><li href="#3">3.Bộ nhớ Rom:</li>
             <br><li href="#4">4.Ổ lưu trữ:</li>
