--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     Trang web hướng dẫn lắp pc. </title>
         <h1 style="color:yellow;border:3px solid black;background-color:LightGray">LẮP RÁP PC</h1>
         <h2 style="color:sandybrown;">I.Bộ phận:</h2>
-        <dl>    <li href="#1">1.Chip:</li>
+        <h2 style="color:Aquamarine>Mục lục:</h2>
+        <dl> <li href="#1">1.Chip:</li>
             <li href="#2">2.Bộ nhớ tạm(ram):</li>
             <li href="#3">3.Bộ nhớ Rom:</li>
             <li href="#4">4.Ổ lưu trữ:</li>
@@ -140,3 +141,4 @@ Các loại chân cắm thường được kết hợp từ nhiều dây điện
     -Các loại Main máy tính hiện có trên thị trường:
         +Với sự phát triển mạnh mẽ của công nghệ như hiện nay thì đang có rất nhiều nhà sản xuất cho ra đời các mainboard khác nhau, nhằm mục đích hỗ trợ tối đa cho người dùng. Tuy nhiên, trong số đó cũng sẽ các loại bo mạch chủ thường được ưa chuộng và sử dụng như: AT, ATX, Baby AT, BTX, DTX, Full AT, Full ATX, microATX, NLX…..
         +Nếu tính về độ phổ biến rộng rãi nhất thì chúng ta có thể kể đến cái tên Mainboard ATX. Loại main này đang được sử dụng trong rất nhiều các máy tính hiện có trên thế giới. Bởi nó mang đến sự vận hành tốt và đảm bảo độ bền bỉ trong quá trình triển khai.
+</pre>
