--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             _Ổ cứng ngoài việc phụ trách lưu trữ dữ liệu còn liên quan trực tiếp đến những vấn đề quan trọng khi sử dụng máy tính như: tốc độ khởi động máy, tốc độ chép xuất dữ liệu của máy, độ an toàn của dữ liệu cá nhân để trên máy. 
             _Bất cứ các thao tác phần mềm trên máy tính của bạn như sao chép, cắt dán, khởi động phần mềm,… nhanh hay chậm đều phụ thuộc vào cấu tạo phần cứng của ổ cứng tốt hay không.
             <br><img src="img/pc5.jpg" height="700" width="500">
-            <img src="img/pc5.2.jpg" height="700" width="500">
+            <img src="img/pc5.2.jpg" height="700" width="500"></p>
         <p style="color:blue;" id="5">5.Nguồn máy tính:</p>
          <p>Máy tính muốn hoạt động được cần phải có một bộ cấp nguồn để điều tiết và phân bổ các luồng điện khác nhau. Thế nhưng bạn đã thật sự hiểu rõ về bộ nguồn máy tính? Hãy theo dõi bài viết dưới đây để hiểu rõ hơn và biết được cách lựa chọn nguồn máy tính phù hợp nhé.
             <br  id="5.1">a.Định nghĩa:
@@ -119,8 +119,8 @@ Các loại chân cắm thường được kết hợp từ nhiều dây điện
         + Đầu cắm ổ đĩa mềm: Đây là loại đầu cắm gồm 2 dây mát, 1 dây +5V, 1 dây +12V.
 
         + Đầu cắm EPS 12V 8 chân: Đầu cắm này sử dụng cho bo mạch chủ của máy tính trạm và hệ thống máy tính chuyên nghiệp, phức tạp.
-</pre>
-<p style="color:blue;" id="6">6.Mainboard: </p>
+</pre></p>
+<p style="color:blue;" id="6">6.Mainboard:</p>
 <pre>-Mainbroad hay còn gọi là Main máy tính hoặc bo mạch chủ, đây là một trong những bảng mạch đóng vai trò nền tảng trong một chiếc máy tính. Vị trí của main thường được đặt tại trung tâm của thùng máy.
     -Chức năng chính của main khi sử dụng đó là phân phối điện cho CPU, RAM và những thành phần khác liên quan đến phần cứng của chiếc máy tính. Đồng thời cũng sẽ tạo ra một dòng liên kết chính để liên kết những phần này lại với nhau.
     -Những cấu tạo của main máy tính hoặc bo mạch chủ sẽ có những phần chính được triển khai như sau:
