--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1 style="color:yellow;border:3px solid black;background-color:LightGray">LẮP RÁP PC</h1>
         <h2 style="color:sandybrown;">I.Bộ phận:</h2>
         <h2 style="color:Aquamarine>Mục lục:</h2>
-        <dl><li><a href="#1">1.Chip:</li>
+        <dl><li><a href="#1">1.Chip:</a></li>
             <li><a href="#2">2.Bộ nhớ tạm(ram):</a></li>
             <li><a href="#3">3.Bộ nhớ Rom:</a></li>
             <li><a href="#4">4.Ổ lưu trữ:</a></li>
@@ -38,8 +38,7 @@
             _Thông tin được nhúng vào ROM, dưới dạng các bit, bởi một quá trình được gọi là lập trình ROM. Ở đây, lập trình được sử dụng để chỉ quy trình phần cứng chỉ định các bit sẽ được chèn vào cấu hình phần cứng của thiết bị. Và đây là những gì làm cho ROM trở thành Thiết bị logic có thể lập trình (PLD).
         <br><img src="img/pc04.jpg" height="700" width="500">
         </p>
-        <p style="color:blue;" id="4">4.Ổ lưu trữ:
-        </p>
+        <p style="color:blue;" id="4">4.Ổ lưu trữ:</p>
         <p>_Ổ cứng máy tính hay còn gọi là ổ cứng (Hard Disk Drive, viết tắt: HDD) là thiết bị dùng để lưu trữ dữ liệu trong máy tính của bạn. Với sự phát triển nhanh chóng của công nghệ, ổ đĩa cứng ngày nay có kích thước mỏng, gọn, nhẹ nhưng dung lượng thì ngày càng tăng lên.
             _Ổ cứng ngoài việc phụ trách lưu trữ dữ liệu còn liên quan trực tiếp đến những vấn đề quan trọng khi sử dụng máy tính như: tốc độ khởi động máy, tốc độ chép xuất dữ liệu của máy, độ an toàn của dữ liệu cá nhân để trên máy. 
             _Bất cứ các thao tác phần mềm trên máy tính của bạn như sao chép, cắt dán, khởi động phần mềm,… nhanh hay chậm đều phụ thuộc vào cấu tạo phần cứng của ổ cứng tốt hay không.
@@ -50,9 +49,10 @@
             <br  id="5.1">a.Định nghĩa:
             <br>Power Supply Unit (PSU) hay còn được gọi là nguồn máy tính, đây là một thiết bị nằm bên trong thùng máy giúp cung cấp năng lượng cho các bộ phận của máy tính như: Bo mạch chủ, ổ cứng, RAM,...
             <br><img src="img/pc6.jpg" height="700" width="500">
+            </p>
             <pre  id="5.2">b.Nguyên lý hoạt động:
             Nguồn máy tính được xem như là một bộ phận trung gian, giúp chuyển đổi dòng điện xoay chiều có hiệu điện thế lớn (Dòng điện từ ổ cắm - 220V) thành các dòng điện có mức điện áp nhỏ hơn. Các dòng điện áp nhỏ này sẽ là năng lượng phù hợp cho các thiết bị, linh kiện của máy tính có thể hoạt động.</pre>
-             <pre  id="5.3">c.Các đường điện có trong nguồn máy tính:
+            <pre  id="5.3">c.Các đường điện có trong nguồn máy tính:
     Nguồn máy tính sẽ có nhiều đường điện khác nhau phù hợp với mỗi linh kiện của máy tính. Cụ thể:
 
     + Đường điện +3.3V: Đây là một đường điện mới trên các bộ nguồn hiện đại. Đường điện này phù hợp với chuẩn ATX - cung cấp điện cho CPU và bộ nhớ chính.
