--- a/index.html
+++ b/index.html
@@ -144,3 +144,5 @@ Các loại chân cắm thường được kết hợp từ nhiều dây điện
         +Với sự phát triển mạnh mẽ của công nghệ như hiện nay thì đang có rất nhiều nhà sản xuất cho ra đời các mainboard khác nhau, nhằm mục đích hỗ trợ tối đa cho người dùng. Tuy nhiên, trong số đó cũng sẽ các loại bo mạch chủ thường được ưa chuộng và sử dụng như: AT, ATX, Baby AT, BTX, DTX, Full AT, Full ATX, microATX, NLX…..
         +Nếu tính về độ phổ biến rộng rãi nhất thì chúng ta có thể kể đến cái tên Mainboard ATX. Loại main này đang được sử dụng trong rất nhiều các máy tính hiện có trên thế giới. Bởi nó mang đến sự vận hành tốt và đảm bảo độ bền bỉ trong quá trình triển khai.
  </pre>
+      <p style="color:blue;" id="7">7.Một số bộ phận khác: </p>
+         <pre id="7.1">a.Quạt tản nhiệt: 
