--- a/index.html
+++ b/index.html
@@ -147,3 +147,16 @@ Các loại chân cắm thường được kết hợp từ nhiều dây điện
  </pre>
       <p style="color:blue;" id="7">7.Một số bộ phận khác: </p>
          <pre id="7.1">a.Quạt tản nhiệt: 
+          -Mọi thiết bị sử dụng điện năng đều phát ra nhiệt bởi nhiệt năng được sinh ra trong quá trình truyền dẫn điện năng trong vật dẫn. Nói một cách dễ hiểu hơn, sự chuyển động của các electron hỗn loạn trong kim loại va đập vào các nút mạng trong cấu trúc tinh thể tạo ra nhiệt năng. Mọi thiết bị đều dùng dây dẫn tín hiệu điện bằng kim loại. Các vật chất bán dẫn khác cũng sinh ra nhiệt khi làm việc.
+          -Sự phát sinh nhiệt trong các thiết bị máy tính là điều không mong muốn. Một mặt khác khi nhiệt độ tăng lên đến một giới hạn chịu đựng nhất định thì các thiết bị này hoạt động không ổn định, có thể dẫn đến làm dừng hệ thống (treo máy) hoặc hư hỏng.
+          -Tản nhiệt dùng quạt là một hình thức tản nhiệt cưỡng bức. Thể loại này sử dụng các quạt nhỏ để lưu chuyển một luồng không khí từ phía sau của quạt đến phía trước chúng nhằm tản nhiệt cho các thiết bị.
+          -Tản nhiệt dùng quạt là phương thức tản nhiệt thông dụng và rẻ tiền nhất trong các phương pháp tản nhiệt cưỡng bức. Chỉ cần sử dụng các quạt gắn lên thiết bị cần tản nhiệt và kết nối vào các đầu cắm nguồn của máy tính hoặc bo mạch chủ.
+           Các thiết bị sau trong máy tính có thể sử dụng tản nhiệt bằng quạt:
+              +CPU
+              +Ổ cứng
+              +Card đồ hoạ
+              +Nguồn máy tính
+              +Chipset cầu bắc
+              +Chipset cầu nam
+              +Vỏ máy tính: Sử dụng tản nhiệt cho toàn bộ hệ thống, một số quạt có thể bố trí tại vị trí phía trước thùng máy, hai bên hông và phía sau thùng máy. Vỏ máy tính còn có khả năng lợi dụng sự tản nhiệt dùng quạt của nguồn máy tính để lưu thông một lượng không khí lớn ra khỏi thùng máy.           
+             </pre>
