--- a/index.html
+++ b/index.html
@@ -247,6 +247,15 @@ Các loại chân cắm thường được kết hợp từ nhiều dây điện
                   h.Lắp quạt làm mát CPU:
                     -Đây là phần phức tạp trong quá trình lắp ráp PC, lắp quạt làm mát CPU.
                     -Đặt cẩn thận tản nhiệt lên sao cho 4 chân khít với 4 lỗ xung quanh CPU, cố định bằng cách đè đối xứng từng cặp chân quạt tản nhiệt sao cho nghe tiếng “cóc” là được. Sau đó, cắm luôn dây tản nhiệt vào 4 chân CPU Fan ở trên main.  
-            <img src="img/pc32.jpg" text-align:center; height="700" width="500">
-
-                        
+            <img src="img/pc32.png" text-align:center; height="700" width="500">
+                  k.Lắp đặt ổ cứng:
+                    -Hiện nay các case đều hỗ trợ lắp được nhiều lại ổ cứng từ SSD, HDD cho đến DVD, mỗi loại đều có khay lắp riêng tương thích với kích thước từng loại ổ cứng.
+                    -Cách lắp vào case khá đơn giản nên các bạn cứ yên tâm. Để HDD nằm ngang, chú ý phần mạch hướng xuống, đặt vào khay chứa ổ cứng, đẩy khay vào trong rồi bắt ốc vít cố định.
+                    -Lắp ổ cứng SSD cũng tương tự, tuy nhiên mỗi case sẽ có vị trí để lắp SSD riêng. Trên thân SSD sẽ có lỗ để bắt ốc, nên lưu ý vị trí đặt ổ SSD để tiện cho việc cắm dây SATA.
+            <img src="img/pc33.png" text-align:center; height="700" width="500">
+                    -Khi lắp cáp vào main và cáp dữ liệu SATA cho ổ cứng để ý phần khớp chữ L ở đầu cáp, cổng trên main cũng tương tự như vậy, đặt đúng chiều và đẩy nhẹ vào.
+                  g.Lắp nguồn (PSU):
+                    -Sau khi đã lắp đặt xong mainboard, CPU, bộ nhớ và ổ cứng, tiếp theo bạn sẽ tiếp tục lắp nguồn. Thường thì nguồn sẽ được lắp ở dưới cùng của máy tính do nguồn khá nặng, nếu thao tác không cẩn thận có thể rơi vào main hay các linh kiện khác dẫn đến hư hỏng.
+                    -Việc lắp nguồn ở phía dưới cũng tạo ra nhiều không gian hơn so với lắp ở trên nóc vỏ máy tính.
+                    -Đặt nguồn vào nơi được bố trí sẵn trong case, phần ghim điện sẽ hướng ra sau case, đẩy PSU vào các vị trí bắt ốc vít và siết chặt. Phần quạt tản nhiệt tích hợp bên trong nguồn nên hướng xuống dưới đáy PC, việc này sẽ giúp nguồn hút được không khí mát. 
+                    <img src="img/pc34.png" text-align:center; height="700" width="500">
