--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Các loại chân cắm thường được kết hợp từ nhiều dây điện
             <li><a href="#8">1.Công cụ tháo lắp:</a></li>
             <li><a href="#9">2.Các bước tháo lắp:</a></li> 
         </dl>        
-                <img src="img/pc24.jpg" text-align:center; height="700" width="500">
+                <img src="img/24.jpg" text-align:center; height="700" width="500">
          <p style="color:blue;" id="8">1.Công cụ tháo lắp:</p>
          <pre>Trước khi build PC, bạn cần chuẩn bị sẵn các dụng cụ và trang bị sau đây:
             -Bộ tua vít đa năng với đầy đủ các dạng đầu và kích cỡ. 
