--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2 style="color:sandybrown;">I.Bộ phận:</h2>
         <h2 style="color:Aquamarine>Mục lục:</h2>
         <dl>
-            <li><a href="#100">1.Chip:</a></li>
+            <li><a href="#100">.1.Chip:</a></li>
             <li><a href="#2">2.Bộ nhớ tạm(ram):</a></li>
             <li><a href="#3">3.Bộ nhớ Rom:</a></li>
             <li><a href="#4">4.Ổ lưu trữ:</a></li>
@@ -205,7 +205,7 @@ Các loại chân cắm thường được kết hợp từ nhiều dây điện
             <li><a href="#9">2.Các bước tháo lắp:</a></li> 
         </dl>        
                 <img src="img/24.jpg" text-align:center; height="700" width="500">
-         <p style="color:blue;" id="8">1.Công cụ tháo lắp:</p>
+         <p style="color:blue;" id="8">.1.Công cụ tháo lắp:</p>
          <pre>Trước khi build PC, bạn cần chuẩn bị sẵn các dụng cụ và trang bị sau đây:
             -Bộ tua vít đa năng với đầy đủ các dạng đầu và kích cỡ. 
             -Nhíp đầu cong và đầu thẳng để gắp các linh kiện như ốc, chip IC hay mở các mạch kết nối ở những vị trí hẹp khi mà bạn không thể dùng tay để thao tác. 
