--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1 style="color:yellow;border:3px solid black;background-color:LightGray">LẮP RÁP PC</h1>
         <h2 style="color:sandybrown;">I.Bộ phận:</h2>
         <h2 style="color:Aquamarine>Mục lục:</h2>
-        <dl>
+        <dl style=""background-color:LightSkyBlue">
             <li><a href="#100">.1.Chip:</a></li>
             <li><a href="#2">2.Bộ nhớ tạm(ram):</a></li>
             <li><a href="#3">3.Bộ nhớ Rom:</a></li>
