--- a/mt.html
+++ b/mt.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset=utf-8>
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+        <link rel="stylesheet" href="styles.css">
+    <title>
+    Trang web hướng dẫn lắp pc. </title>
+     <body>
+        <h1 style="color:yellow;border:3px solid black;background-color:LightGray">LẮP RÁP PC</h1>
