--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>
     Trang web hướng dẫn lắp pc. </title>
      <body>
-        <h1 style="color:yellow;border:3px solid black;background-color:LightGray">LẮP RÁP PC</h1>
+        <h1 style="color:yellow;border:3px solid black;background-color:LightGray">GIOI THEU PC</h1>
         <h2 style="color:sandybrown;">Bộ phận:</h2>
         <h2 style="color:Aquamarine>Mục lục:</h2>
         <dl style=""background-color:LightSkyBlue">
