--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ Các loại chân cắm thường được kết hợp từ nhiều dây điện
               +Chipset cầu nam
               +Vỏ máy tính: Sử dụng tản nhiệt cho toàn bộ hệ thống, một số quạt có thể bố trí tại vị trí phía trước thùng máy, hai bên hông và phía sau thùng máy. Vỏ máy tính còn có khả năng lợi dụng sự tản nhiệt dùng quạt của nguồn máy tính để lưu thông một lượng không khí lớn ra khỏi thùng máy.           
              </pre>
-                                                            <img src="img/pc16.jpg" text-align:center; height="700" width="500">
+                                                            <img src="img/pc16.png" text-align:center; height="700" width="500">
           <pre id="7.2">b.Vỏ máy tính(Case máy tính):
            -Case máy tính (hay còn gọi là thúng hoặc vỏ máy tính) là một bộ phận bên ngoài có tác dụng bao bọc cho các thành phần bên trong của máy tính, tránh được các tác động không mong muốn từ bên ngoài.
                                                             <img src="img/pc17.jpg" text-align:center; height="700" width="500">
